update profile and technology icons with new image sources

--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
               class="w-32 h-32 mx-auto bg-blue-400 rounded-full overflow-hidden"
             >
               <img
-                src="https://firebasestorage.googleapis.com/v0/b/bangkit-dashboard/o/production%2F2024-B2%2Fprofiles%2F60f4110d-b069-4c95-bd00-72d99b74c952.jpeg?alt=media&token=b961ab94-5333-4eb5-a402-911727168031"
+                src="https://storage.googleapis.com/submission-dicoding-rizkirmdhn/pp.jpeg"
                 alt="Profile Image"
                 class="w-full h-full object-cover"
               />
@@ -196,35 +196,66 @@
               >
                 <span class="font-bold">
                   <img
-                    src="https://as2.ftcdn.net/v2/jpg/03/64/21/11/1000_F_364211147_1qgLVxv1Tcq0Ohz3FawUfrtONzz8nq3e.jpg"
+                    src="https://storage.googleapis.com/submission-dicoding-rizkirmdhn/vscode-icon.png"
                     alt="Vscode"
+                    class="h-8 w-8"
                   />
                 </span>
               </div>
               <div
                 class="bg-slate-100 p-2 rounded flex items-center justify-center"
               >
-                <span class="font-bold">Git</span>
+                <span class="font-bold">
+                  <img
+                    src="https://storage.googleapis.com/submission-dicoding-rizkirmdhn/docker-icon.png"
+                    alt="Docker"
+                    class="h-8 w-8"
+                  />
+                </span>
               </div>
               <div
                 class="bg-slate-100 p-2 rounded flex items-center justify-center"
               >
-                <span class="font-bold">Docker</span>
+                <span class="font-bold">
+                  <img
+                    src="https://storage.googleapis.com/submission-dicoding-rizkirmdhn/git-icon.png"
+                    alt="Git"
+                    class="h-8 w-8"
+                  />
+                </span>
               </div>
               <div
                 class="bg-slate-100 p-2 rounded flex items-center justify-center"
               >
-                <span class="font-bold">AWS</span>
+                <span class="font-bold">
+                  <img
+                    src="https://storage.googleapis.com/submission-dicoding-rizkirmdhn/postman-icon.png"
+                    alt="Postman"
+                    class="h-8 w-8"
+                  />
+                </span>
               </div>
               <div
                 class="bg-slate-100 p-2 rounded flex items-center justify-center"
               >
-                <span class="font-bold">Figma</span>
+                <span class="font-bold">
+                  <img
+                    src="https://storage.googleapis.com/submission-dicoding-rizkirmdhn/figma-icon.png"
+                    alt="Figma"
+                    class="h-8 w-8"
+                  />
+                </span>
               </div>
               <div
                 class="bg-slate-100 p-2 rounded flex items-center justify-center"
               >
-                <span class="font-bold">Jira</span>
+                <span class="font-bold">
+                  <img
+                    src="https://storage.googleapis.com/submission-dicoding-rizkirmdhn/gcp-icon.png"
+                    alt="GCP"
+                    class="h-8 w-8"
+                  />
+                </span>
               </div>
             </div>
           </section>
